# dcg-wiki-scripts

./: list_rulings.py  pyproject.toml  set_data.py
