[tool.poetry]
name = "rk9_scraper"
version = "0.1.0"
description = ""
authors = ["jeffinitelyjeff"]

[tool.poetry.dependencies]
bs4 = "^0.0.1"
lxml = "^4.7.1"
python = "^3.10"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
requests = "^2.27.1"
wikitextparser = "^0.51.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
